[package]
name = "pawcrypt"
version = "0.2.0"
edition = "2021"
description = "Deniable encryption CLI with dual-volume AES-256-GCM and Argon2id"
license = "MIT"
keywords = ["encryption", "cryptography", "cli", "deniable", "steganography"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"

[[bin]]
name = "pawcrypt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
argon2 = "0.5"
owo-colors = "4"
anyhow = "1"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
rpassword = "7"
indicatif = "0.17"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
